[gd_scene load_steps=7 format=3 uid="uid://ygq2q8lm2ubk"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_obko2"]
[ext_resource type="PackedScene" uid="uid://dlgnshjne4lpw" path="res://scenes/death_overlay.tscn" id="2_txvtr"]
[ext_resource type="Script" path="res://scripts/player/gun_slot.gd" id="2_vdmnf"]
[ext_resource type="Script" path="res://scripts/player/movement_controller.gd" id="3_md0ua"]
[ext_resource type="Script" path="res://scripts/player/interact_ray.gd" id="4_k452p"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.489975
height = 1.77068

[node name="Player" type="CharacterBody3D" groups=["Player"]]
wall_min_slide_angle = 0.802851
script = ExtResource("1_obko2")
death_overlay_scene = ExtResource("2_txvtr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.893577, 0)
shape = SubResource("1")

[node name="MovementController" type="Node3D" parent="."]
script = ExtResource("3_md0ua")

[node name="Down" type="RayCast3D" parent="MovementController"]

[node name="Left" type="RayCast3D" parent="MovementController"]
target_position = Vector3(-1, 0, 0)

[node name="Right" type="RayCast3D" parent="MovementController"]
target_position = Vector3(1, 0, 0)

[node name="PivotPoint" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="PivotPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43342, 0)
current = true

[node name="GunSlotPrimary" type="Node3D" parent="PivotPoint/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.25, -0.4)
script = ExtResource("2_vdmnf")

[node name="InteractRay" type="RayCast3D" parent="PivotPoint/Camera3D"]
target_position = Vector3(0, 0, -4)
script = ExtResource("4_k452p")
